Version 16.6:

(2016-05-27)
 * Use the mplayer/mpv default video and audio output.

(2016-05-25)
 * Disable the global shortcuts when opening the preferences dialog.

(2016-05-23)
 * Add an option to display the format info in the status bar.

(2016-05-17)
 * Add a quick access menu.

(2016-05-15)
 * Don't use a border in the style of the tooltip. For some reason the
   text is cut off with it.

(2016-05-13)
 * Add options in Preferences -> Interface to configure the high DPI
   support.

(2016-05-12)
 * Possibility to display the section area in the preferences dialog in
   icon mode.

(2016-05-10)
 * Add an option to set the cache to auto in Preferences -> Performance.
 * Don't change the playlist to floating state when entering fullscreen,
   if using Qt5 on linux. Seems to fix a problem when using Compiz.

(2016-05-09)
 * Increase the height of the audio equalizer.
 * Set the OSD to Seek as default.
 * Set the drag function to MoveWindow as default.

(2016-05-08)
 * Change the default values for outline and shadow of the ASS style.
 * Use mpv as default if available.
 * Remove the border of the tooltips. Otherwise, for some reason, the
   text is not shown complete.

(2016-05-06)
 * Use the style 'fusion' as default with Qt 5.

(2016-05-05)
 * Improve drag & drop on the main window. Now it allows to drop several
   folders and files.

(2016-05-02)
 * (Windows) Use the 'normal' priority by default.
 * Possibility to use the media keys as global shortcurts (option in
   Prefences -> Keyboard).

(2016-04-28)
 * Don't use the language toolbar.
 * Add the audio and subtitle track menus to the toolbar and increase the
   default size of the toolbar icons.

(2016-04-27)
 * Add close buttons to the audio and video equalizers.

(2016-04-26)
 * Disable the secondary subtitles and frame step back when using mplayer,
   and the karaoke filter when using mpv.

(2016-04-24)
 * Don't use a dockable playlist on linux with Qt 5 because the